--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/AndroidManifest.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/AndroidManifest.xml
@@ -20,4 +20,6 @@
         </activity>
     </application>
 
-</manifest>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    </manifest>
